docs/2019/1.2.1/view.md

### Траектория молекулярной динамики димера гистонов Н2А/Н2В с участком ДНК 30 пар нуклеотидов
[Назад](https://intbio.org/grant_2018_RNFmoluch/year2.html)

<html lang="en">
<head>
  <meta charset="utf-8">
</head>
<body>
  <p style="color:#020AED;font-size:22px;font-family:verdana;font-weight: bold;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;display: inline">H3</p> 
  <p style="color:#009933;font-size:22px;font-family:verdana;font-weight: bold;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;display: inline">H4</p>
  <p style="color:#E0F705;font-size:22px;font-family:verdana;font-weight: bold;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;display: inline">H2A</p>
  <p style="color:#CE0000;font-size:22px;font-family:verdana;font-weight: bold;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;display: inline">H2B</p>
  <p style="color:#808080;font-size:22px;font-family:verdana;font-weight: bold;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;display: inline">ДНК</p>
 
  <script src="https://unpkg.com/ngl@2.0.0-dev.35/dist/ngl.js"></script>  
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/lib/signals.min.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/lib/tether.min.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/lib/colorpicker.min.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/ui/ui.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/ui/ui.extra.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/ui/ui.ngl.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/ui/ui.helper.js"></script>
  <script src="https://intbio.org/grant_2018_RNFmoluch/js/gui.js"></script>
  <script>
    document.addEventListener("DOMContentLoaded", function () {
      var stage = new NGL.Stage("viewport",{ backgroundColor:"#FFFFFF" });
      NGL.StageWidget(stage)
      stage.loadFile("sys_ref.pdb").then(function (nucl) {
        var aspectRatio = 2;
        var radius = 1.5;
        nucl.addRepresentation('cartoon', {
           "sele": ":A :E", "color": 0x020AED,"aspectRatio":aspectRatio, "radius":radius,"radiusSegments":1,"capped":0 });
        nucl.addRepresentation('cartoon', {
           "sele": ":B :F", "color": "green","aspectRatio":aspectRatio, "radius":radius,"radiusSegments":1,"capped":0 });
        nucl.addRepresentation('cartoon', {
           "sele": ":C :G", "color": 0xE0F705,"aspectRatio":aspectRatio, "radius":radius,"radiusSegments":1,"capped":0 });
        nucl.addRepresentation('cartoon', {
           "sele": ":D :H", "color": 0xCE0000,"aspectRatio":aspectRatio, "radius":radius,"radiusSegments":1,"capped":0 });
        nucl.addRepresentation('cartoon', {
           "sele": "nucleic", "color": "grey","aspectRatio":aspectRatio, "radius":radius,"radiusSegments":1,"capped":0 });
        nucl.addRepresentation('base', {
           "sele": "nucleic", "color": "grey"});
        NGL.autoLoad("sys_md_skip20.xtc").then(function (frames) {
          nucl.addTrajectory(frames);
          var traj = nucl.trajList[0].trajectory;
          var player = new NGL.TrajectoryPlayer( traj,{step: 1, timeout: 20, direction : "bounce",interpolateType:'spline', interpolateStep:5});
          player.play();
        });  
        nucl.autoView();
      });
    });
  </script>
  <div id="viewport" style="width:500px; height:500px; border: thin solid black"></div>
</body>
</html>
